--- a/flights/templates/flights/index.html
+++ b/flights/templates/flights/index.html
@@ -1,10 +1,13 @@
 {% extends "flights/layout.html" %}
 
 {% block body %}
+<h1>Welcome, {{ request.user.first_name }}</h1>
 <h1>Flights:</h1>
 <ul>
 {% for flight in flights %}
   <li><a href= "{% url 'flight' flight.id %}">Flight {{ flight.id }}</a>: {{ flight.origin }} to {{ flight.destination }}</li>
   {% endfor %}
 </ul>
+
+<a href="{% url 'logout' %}">Log Out</a>
 {% endblock %}
